# Kalman-Filter

./: CMakeLists.txt  README.md  plot_scalar_kf_results.py
include/: scalar_kf.hpp
src/: scalar_kf.cpp
test/: main.cpp
